vmap
git clone git://git.kernel.org/pub/scm/linux/kernel/git/luto/linux.git

git checkout test_20160622_vmap_stack_sg_init_stackbuf

ubuntu:~/vmap/luto/linux# git branch
* (detached from test_20160622_vmap_stack_sg_init_stackbuf)
  master
root@ubuntu:~/vmap/luto/linux# git describe

20160610_uvc_compat_for_linus-374-g16aaa6a
root@ubuntu:~/vmap/luto/linux# 
root@ubuntu:~/vmap/luto/linux# 

ubuntu:~/vmap/luto/linux# git describe --tag
test_20160622_vmap_stack_sg_init_stackbuf

make



In file included from include/asm-generic/percpu.h:6:0,
                 from ./arch/x86/include/asm/percpu.h:551,
                 from ./arch/x86/include/asm/preempt.h:5,
                 from include/linux/preempt.h:59,
                 from include/linux/spinlock.h:50,
                 from include/linux/seqlock.h:35,
                 from include/linux/time.h:5,
                 from include/uapi/linux/timex.h:56,
                 from include/linux/timex.h:56,
                 from include/linux/sched.h:19,
                 from arch/x86/mm/fault.c:6:
arch/x86/mm/fault.c: In function ‘no_context’:
arch/x86/mm/fault.c:772:18: error: ‘orig_ist’ undeclared (first use in this function)
    this_cpu_read(orig_ist.ist[DOUBLEFAULT_STACK]) -
                  ^
include/linux/percpu-defs.h:305:9: note: in definition of macro ‘__pcpu_size_call_return’
  typeof(variable) pscr_ret__;     \
         ^
arch/x86/mm/fault.c:772:4: note: in expansion of macro ‘this_cpu_read’
    this_cpu_read(orig_ist.ist[DOUBLEFAULT_STACK]) -
    ^
arch/x86/mm/fault.c:772:18: note: each undeclared identifier is reported only once for each function it appears in
    this_cpu_read(orig_ist.ist[DOUBLEFAULT_STACK]) -
                  ^
include/linux/percpu-defs.h:305:9: note: in definition of macro ‘__pcpu_size_call_return’
  typeof(variable) pscr_ret__;     \
         ^
arch/x86/mm/fault.c:772:4: note: in expansion of macro ‘this_cpu_read’
    this_cpu_read(orig_ist.ist[DOUBLEFAULT_STACK]) -
    ^
make[2]: *** [arch/x86/mm/fault.o] Error 1
make[1]: *** [arch/x86/mm] Error 2
make: *** [arch/x86] Error 2















